<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_16"
    tools:context=".ui.detail.fragment.DescriptionFragment">


    <TextView
        android:id="@+id/labelOverview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_overview"
        android:textSize="@dimen/text_16"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        tools:text="@string/longTitle"
        />

    
    <TextView
        android:id="@+id/labelGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_genre"
        android:textSize="@dimen/text_16"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_8"
        />
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvGenre"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        />


    <TextView
        android:id="@+id/labelRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_rating"
        android:textSize="@dimen/text_16"
        android:layout_marginTop="@dimen/margin_16"
        android:textStyle="bold"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_16"
        >

        <TextView
            android:id="@+id/label_vote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/label_vote"
            android:layout_weight="0.5"
            />

        <TextView
            android:id="@+id/tvVote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_weight="0.5"
            android:textAlignment="textStart"
            tools:text="sample"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_8"
        >

        <TextView
            android:id="@+id/label_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/label_count"
            android:layout_weight="0.5"
            />

        <TextView
            android:id="@+id/tvCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_weight="0.5"
            android:textAlignment="textStart"
            tools:text="sample"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_8"
        >

        <TextView
            android:id="@+id/label_popularity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/label_popularity"
            android:layout_weight="0.5"
            />

        <TextView
            android:id="@+id/tvPopularity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_weight="0.5"
            android:textAlignment="textStart"
            tools:text="sample"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_8"
        >

        <TextView
            android:id="@+id/label_budget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/label_budget"
            android:layout_weight="0.5"
            />

        <TextView
            android:id="@+id/tvBudget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_weight="0.5"
            android:textAlignment="textStart"
            tools:text="sample"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_8"
        >

        <TextView
            android:id="@+id/label_revenue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/label_revenue"
            android:layout_weight="0.5"
            />

        <TextView
            android:id="@+id/tvRevenue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_weight="0.5"
            android:textAlignment="textStart"
            tools:text="sample"
            />
    </LinearLayout>




</LinearLayout>